Add functions for SDK demo
1. Support DPS notification in android Demo
2. Support speak-to function in iOS Demo

--- a/Demo/Android/app/src/main/res/layout/activity_main.xml
+++ b/Demo/Android/app/src/main/res/layout/activity_main.xml
@@ -67,6 +67,11 @@
         android:layout_height="wrap_content"
         android:text="Command test"/>
 
+    <Button android:id="@+id/btn_dps_subscribe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="DPS subscribe"/>
+
     <FrameLayout android:id="@+id/layout_player_container"
         android:layout_width="match_parent"
         android:layout_height="240dp"
