--- a/Demo/iOS/ECSDKDemo/ECSDKDemo/Base.lproj/Main.storyboard
+++ b/Demo/iOS/ECSDKDemo/ECSDKDemo/Base.lproj/Main.storyboard
@@ -237,10 +237,27 @@
                                     <action selector="sendCmdFunc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yN6-lW-AtZ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EaZ-xV-glE">
+                                <rect key="frame" x="20" y="578.5" width="125" height="35"/>
+                                <color key="backgroundColor" red="0.92549019607843142" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Open talk"/>
+                                <connections>
+                                    <action selector="openTalkBtnFunc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rCv-7N-agR"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2mU-oB-rWU">
+                                <rect key="frame" x="230" y="578.5" width="125" height="35"/>
+                                <color key="backgroundColor" red="0.92549019607843142" green="0.92549019607843142" blue="0.92549019607843142" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Close talk"/>
+                                <connections>
+                                    <action selector="closeTalkBtnFunc:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MaV-wl-3Z7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Du-E4-2n5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6E4-5O-6p7"/>
+                            <constraint firstItem="EaZ-xV-glE" firstAttribute="top" secondItem="6Du-E4-2n5" secondAttribute="bottom" constant="20" id="7Oc-jA-p4G"/>
                             <constraint firstItem="1YA-f7-LdM" firstAttribute="leading" secondItem="uy0-8B-b7C" secondAttribute="trailing" constant="10" id="7se-Wv-OCB"/>
                             <constraint firstItem="Zu8-jH-Bln" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="9vi-Gu-3wV"/>
                             <constraint firstItem="uy0-8B-b7C" firstAttribute="top" secondItem="Zu8-jH-Bln" secondAttribute="bottom" constant="20" id="AWl-mq-Ns0"/>
@@ -253,13 +270,17 @@
                             <constraint firstItem="lww-c4-9wJ" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" symbolic="YES" id="LoR-PH-Nvo"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="CzI-j8-RfO" secondAttribute="trailing" constant="20" symbolic="YES" id="Nov-MU-CL7"/>
                             <constraint firstItem="GX0-wb-8J3" firstAttribute="top" secondItem="uy0-8B-b7C" secondAttribute="bottom" constant="20" id="NsJ-M2-zdN"/>
+                            <constraint firstItem="EaZ-xV-glE" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="1:3" id="OGD-sW-Wnt"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1YA-f7-LdM" secondAttribute="trailing" constant="20" id="PFg-63-6dy"/>
+                            <constraint firstItem="2mU-oB-rWU" firstAttribute="trailing" secondItem="6Du-E4-2n5" secondAttribute="trailing" id="Uam-UB-NKt"/>
+                            <constraint firstItem="EaZ-xV-glE" firstAttribute="height" secondItem="6Du-E4-2n5" secondAttribute="height" id="VGH-Wp-l2a"/>
                             <constraint firstItem="GX0-wb-8J3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="VQ4-gx-LNi"/>
                             <constraint firstAttribute="trailing" secondItem="SWA-Kr-f2S" secondAttribute="trailing" constant="20" id="VYJ-bl-Q4Z"/>
                             <constraint firstItem="ZnY-Qy-0CZ" firstAttribute="top" secondItem="CzI-j8-RfO" secondAttribute="bottom" constant="20" id="Ypj-Xk-Hmw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Zu8-jH-Bln" secondAttribute="trailing" constant="20" id="ZKu-zK-cTC"/>
                             <constraint firstItem="Zu8-jH-Bln" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="bSu-0O-RrA"/>
                             <constraint firstItem="ZnY-Qy-0CZ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="c25-hx-EjH"/>
+                            <constraint firstItem="2mU-oB-rWU" firstAttribute="width" secondItem="EaZ-xV-glE" secondAttribute="width" id="g7v-pI-xZv"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="lww-c4-9wJ" secondAttribute="trailing" constant="20" id="hC0-PL-Cj2"/>
                             <constraint firstItem="uy0-8B-b7C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hPT-hJ-tz4"/>
                             <constraint firstItem="3Rl-uD-H8c" firstAttribute="leading" secondItem="6Du-E4-2n5" secondAttribute="leading" id="iXF-MZ-Bbp"/>
@@ -268,17 +289,22 @@
                             <constraint firstItem="6Du-E4-2n5" firstAttribute="top" secondItem="ZnY-Qy-0CZ" secondAttribute="bottom" constant="40" id="rI5-6d-VhC"/>
                             <constraint firstAttribute="bottom" secondItem="3Rl-uD-H8c" secondAttribute="bottom" constant="302" id="rJZ-4p-u5o"/>
                             <constraint firstItem="SWA-Kr-f2S" firstAttribute="centerY" secondItem="GX0-wb-8J3" secondAttribute="centerY" id="rOc-Z2-QlY"/>
+                            <constraint firstItem="2mU-oB-rWU" firstAttribute="height" secondItem="EaZ-xV-glE" secondAttribute="height" id="rgr-yi-FC8"/>
+                            <constraint firstItem="2mU-oB-rWU" firstAttribute="top" secondItem="EaZ-xV-glE" secondAttribute="top" id="ubb-FE-9h4"/>
                             <constraint firstItem="3Rl-uD-H8c" firstAttribute="trailing" secondItem="6Du-E4-2n5" secondAttribute="trailing" id="yNP-FX-PXT"/>
+                            <constraint firstItem="EaZ-xV-glE" firstAttribute="leading" secondItem="6Du-E4-2n5" secondAttribute="leading" id="ycT-b9-pmm"/>
                             <constraint firstItem="CzI-j8-RfO" firstAttribute="top" secondItem="SWA-Kr-f2S" secondAttribute="bottom" constant="20" id="zcc-zZ-Ksb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="ECSDKDemo" id="tvH-pR-mgO"/>
                     <connections>
+                        <outlet property="closeTalkBtn" destination="2mU-oB-rWU" id="g6X-RQ-6JI"/>
                         <outlet property="cmdBtn" destination="6Du-E4-2n5" id="lgM-Tq-yyx"/>
                         <outlet property="cmdResultLabel" destination="3Rl-uD-H8c" id="kqr-K7-4HK"/>
                         <outlet property="loginBtn" destination="CzI-j8-RfO" id="qgG-kv-lAa"/>
                         <outlet property="logoutBtn" destination="lww-c4-9wJ" id="3PM-dz-eVN"/>
+                        <outlet property="openTalkBtn" destination="EaZ-xV-glE" id="UFk-hs-sI3"/>
                         <outlet property="passwordTextField" destination="SWA-Kr-f2S" id="CIn-ax-Pi8"/>
                         <outlet property="uidTextField" destination="1YA-f7-LdM" id="k33-JQ-oRh"/>
                         <outlet property="videoShowImageView" destination="ZnY-Qy-0CZ" id="4Gn-hl-bh4"/>
@@ -286,7 +312,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="134"/>
+            <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
         <!--Command-->
         <scene sceneID="dcu-kH-w4p">
